--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,8 @@ flutter:
   # adding or updating assets for this project.
   plugin:
     platforms:
-      linux:
-        pluginClass: SystemTrayPlugin
+#       linux:
+#         pluginClass: SystemTrayPlugin
       macos:
         pluginClass: SystemTrayPlugin
       windows:
